Fixes bugs on mobile screnn

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -739,6 +739,7 @@ button:active{
 }
 
 /* Media queries */
+/* Laptop */
 @media screen and (max-width:1470px){
     /* Reducing font sizes For any screen sizes less than 1470 */
    h1{
@@ -763,8 +764,14 @@ button:active{
    
    
 }
+
+
 /* Reducing font sizes For any screen sizes less than 1180 (eg:tablets) */
 @media screen and (max-width:1180px){
+    /* Divider 2 */
+    .divider-two{
+        top:-10px;
+    }
     /* Brings intro closer to the screen */
     .wrapper{
         perspective: 70px;
@@ -806,7 +813,7 @@ button:active{
     }
 
     .about-me{
-        font-size: .7rem;
+        font-size: .6rem;
     }
 
    /* Turns off hover effects */
@@ -851,6 +858,7 @@ button:active{
     }
 
     button{
+        height: 30%;
         -webkit-tap-highlight-color: #3a2d44;
     }
 }
@@ -858,8 +866,10 @@ button:active{
 
 
 
+
+
 /* Mobile */
-@media screen and (max-width:767px){
+@media screen and (max-width:767px) {
     /* First curve divider */
     .divider-one{
         /* border: 1px solid black; */
@@ -870,12 +880,14 @@ button:active{
     /* Navbar */
     .navbar{
         /* border: 1px solid black; */
+        opacity: 1;
         font-size: 1rem;
-        right: 1.1rem;
+        /* right: 1.1rem; */
         border-radius: 0;
-        width: 100%;
+        width: 90%;
         height: 8%;
         margin-right: 0;
+        
     }
 
     .navbar > a:hover{
@@ -900,6 +912,7 @@ button:active{
     .socials{
         /* border: 1px solid black; */
         animation: none;
+        opacity: 1;
         width: 60%;
         height: 15%;
         box-shadow: none ;
@@ -979,8 +992,8 @@ button:active{
    
     .slide{
         /* border: 1px solid red; */
-        width: 40%;
-        height: 20%;
+        width: 80%;
+        height: 30%;
         margin: 0 .5rem;
     }
 
@@ -997,6 +1010,7 @@ button:active{
     .projects{
         /* border: 1px solid yellow; */
         display: flex;
+        flex-direction: column;
     }
 
     .projects > h1{
@@ -1097,9 +1111,7 @@ button:active{
         height: 80%;
     }
     
-    button{
-        height: 30%;
-    }
+  
 
     
 }
